--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,10 @@
+/* Google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
 
 *{
   margin: 0;
